--- a/kawn_subscriptions_manager/templates/users/admin/home_admin.html
+++ b/kawn_subscriptions_manager/templates/users/admin/home_admin.html
@@ -45,7 +45,7 @@
                         </div>
                     </div>
                     <div class="col-4 text-end">
-                        <div class="icon icon-shape bg-gradient-primary shadow text-center border-radius-md">
+                        <div class="icon icon-shape bg-gradient-info shadow text-center border-radius-md">
                             <i class="ni ni-money-coins text-lg opacity-10" aria-hidden="true"></i>
                         </div>
                     </div>
@@ -67,7 +67,7 @@
                         </div>
                     </div>
                     <div class="col-4 text-end">
-                        <div class="icon icon-shape bg-gradient-primary shadow text-center border-radius-md">
+                        <div class="icon icon-shape bg-gradient-info shadow text-center border-radius-md">
                             <i class="ni ni-world text-lg opacity-10" aria-hidden="true"></i>
                         </div>
                     </div>
@@ -89,7 +89,7 @@
                         </div>
                     </div>
                     <div class="col-4 text-end">
-                        <div class="icon icon-shape bg-gradient-primary shadow text-center border-radius-md">
+                        <div class="icon icon-shape bg-gradient-info shadow text-center border-radius-md">
                             <i class="ni ni-paper-diploma text-lg opacity-10" aria-hidden="true"></i>
                         </div>
                     </div>
@@ -111,7 +111,7 @@
                         </div>
                     </div>
                     <div class="col-4 text-end">
-                        <div class="icon icon-shape bg-gradient-primary shadow text-center border-radius-md">
+                        <div class="icon icon-shape bg-gradient-info shadow text-center border-radius-md">
                             <i class="ni ni-cart text-lg opacity-10" aria-hidden="true"></i>
                         </div>
                     </div>
@@ -139,7 +139,7 @@
                         </div>
                     </div>
                     <div class="col-lg-5 ms-auto text-center mt-5 mt-lg-0">
-                        <!-- <div class="bg-gradient-primary border-radius-lg h-100">
+                        <!-- <div class="bg-gradient-info border-radius-lg h-100">
                 <img src="../assets/img/shapes/waves-white.svg" class="position-absolute h-100 w-50 top-0 d-lg-block d-none" alt="waves">
                 <div class="position-relative d-flex align-items-center justify-content-center h-100">
                   <img class="w-100 position-relative z-index-2 pt-4" src="../assets/img/illustrations/rocket-white.png" alt="rocket">
