--- a/kawn_subscriptions_manager/templates/403.html
+++ b/kawn_subscriptions_manager/templates/403.html
@@ -3,7 +3,15 @@
 {% block title %}Forbidden (403){% endblock %}
 
 {% block content %}
-<h1>Forbidden (403)</h1>
+<div class="row">
+  <div class="col-xl-12 col-sm-12 mb-xl-0 mb-4">
+    <div class="card">
+      <div class="card-body p-3 mb-xl-12">
+        <h1>Forbidden (403)</h1>
 
-<p>{% if exception %}{{ exception }}{% else %}You're not allowed to access this page.{% endif %}</p>
+        <p class="mb-xl-10">{% if exception %}{{ exception }}{% else %}You're not allowed to access this page.{% endif %}</p>
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock content %}
