--- a/kawn_subscriptions_manager/templates/base.html
+++ b/kawn_subscriptions_manager/templates/base.html
@@ -68,8 +68,10 @@
       <i class="fas fa-times p-3 cursor-pointer text-secondary opacity-5 position-absolute end-0 top-0 d-none d-xl-none"
         aria-hidden="true" id="iconSidenav"></i>
       <a class="navbar-brand m-0" href="{% url 'users:home' %}" target="_blank">
-        <span class="ms-2 font-weight-bold">Kawn Subscriptions</span><br>
-        <span class="ms-2 font-weight-bold">Manager</span>
+        <!-- <span class="ms-2 font-weight-bold">Kawn Subscriptions</span><br>
+        <span class="ms-2 font-weight-bold">Manager</span> -->
+        <img src="{% static 'images/kawn_logo.svg' %}" alt=""><br>
+        <span class="font-weight-bold">Subscriptions Manager</span>
       </a>
     </div>
     <hr class="horizontal dark mt-0">
