--- a/kawn_subscriptions_manager/templates/users/supervisor/home_supervisor.html
+++ b/kawn_subscriptions_manager/templates/users/supervisor/home_supervisor.html
@@ -15,7 +15,7 @@
                         </div>
                     </div>
                     <div class="col-4 text-end">
-                        <div class="icon icon-shape bg-gradient-primary shadow text-center border-radius-md">
+                        <div class="icon icon-shape bg-gradient-info shadow text-center border-radius-md">
                             <i class="ni ni-money-coins text-lg opacity-10" aria-hidden="true"></i>
                         </div>
                     </div>
@@ -37,7 +37,7 @@
                         </div>
                     </div>
                     <div class="col-4 text-end">
-                        <div class="icon icon-shape bg-gradient-primary shadow text-center border-radius-md">
+                        <div class="icon icon-shape bg-gradient-info shadow text-center border-radius-md">
                             <i class="ni ni-world text-lg opacity-10" aria-hidden="true"></i>
                         </div>
                     </div>
@@ -59,7 +59,7 @@
                         </div>
                     </div>
                     <div class="col-4 text-end">
-                        <div class="icon icon-shape bg-gradient-primary shadow text-center border-radius-md">
+                        <div class="icon icon-shape bg-gradient-info shadow text-center border-radius-md">
                             <i class="ni ni-paper-diploma text-lg opacity-10" aria-hidden="true"></i>
                         </div>
                     </div>
@@ -81,7 +81,7 @@
                         </div>
                     </div>
                     <div class="col-4 text-end">
-                        <div class="icon icon-shape bg-gradient-primary shadow text-center border-radius-md">
+                        <div class="icon icon-shape bg-gradient-info shadow text-center border-radius-md">
                             <i class="ni ni-cart text-lg opacity-10" aria-hidden="true"></i>
                         </div>
                     </div>
