Update Login Logo

--- a/kawn_subscriptions_manager/templates/account/login.html
+++ b/kawn_subscriptions_manager/templates/account/login.html
@@ -30,13 +30,14 @@
 <body>
     <main class="main-content  mt-0">
         <section>
-            <div class="page-header min-vh-75">
+            <div class="page-header min-vh-95">
                 <div class="container">
                     <div class="row">
                         <div class="col-xl-4 col-lg-5 col-md-6 d-flex flex-column mx-auto">
                             <div class="card card-plain mt-4 shadow-lg">
                                 <div class="card-header pb-0 text-left bg-transparent">
-                                    <h3 class="font-weight-bolder text-info text-gradient">Welcome back</h3>
+                                    <img src="{% static 'images/kawn_logo.svg' %}" alt="" width="30%"><br>
+                                    <h3 class="font-weight-bolder text-info text-gradient">Subscriptions Manager</h3>
                                     <p class="mb-0">Enter your email and password to sign in</p>
                                 </div>
                                 <div class="card-body">
