--- a/kawn_subscriptions_manager/templates/users/supervisor/home_supervisor.html
+++ b/kawn_subscriptions_manager/templates/users/supervisor/home_supervisor.html
@@ -1,4 +1,8 @@
 {% extends "base.html" %}
+
+{% block menu-title %}Dashboard{% endblock %}
+{% block dashboard-active %}active{% endblock %}
+
 {% block content %}
 <div class="row">
     <div class="col-xl-3 col-sm-6 mb-xl-0 mb-4">
