--- a/kawn_subscriptions_manager/templates/account/login.html
+++ b/kawn_subscriptions_manager/templates/account/login.html
@@ -48,11 +48,11 @@
                                     </form>
                                 </div>
                                 <div class="card-footer text-center pt-0 px-lg-2 px-1">
-                                    <p class="mb-4 text-sm mx-auto">
+                                    <!-- <p class="mb-4 text-sm mx-auto">
                                         Don't have an account?
                                         <a href="{{ signup_url }}" class="text-info text-gradient font-weight-bold">Sign
                                             up</a>
-                                    </p>
+                                    </p> -->
                                 </div>
                             </div>
                         </div>
