--- a/kawn_subscriptions_manager/templates/account/password_change.html
+++ b/kawn_subscriptions_manager/templates/account/password_change.html
@@ -6,11 +6,18 @@
 {% block head_title %}{% translate "Change Password" %}{% endblock %}
 
 {% block inner %}
-    <h1>{% translate "Change Password" %}</h1>
+<div class="row">
+    <div class="col-xl-12 col-sm-12 mb-xl-0 mb-4">
+        <div class="card">
+            <div class="card-body"></div>
+            <h2 class="text-center">{% translate "Change Password" %}</h2>
+            <form method="POST" action="{% url 'account_change_password' %}" class="card card-body">
+                {% csrf_token %}
+                {{ form|crispy }}
+                <button class="btn btn-info bg-gradient-info" type="submit" name="action">{% translate "Change Password"%}</button>
+            </form>
+        </div>
+    </div>
+</div>
 
-    <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
-        {% csrf_token %}
-        {{ form|crispy }}
-        <button class="btn btn-primary" type="submit" name="action">{% translate "Change Password" %}</button>
-    </form>
 {% endblock %}
