--- a/kawn_subscriptions_manager/templates/account/signup.html
+++ b/kawn_subscriptions_manager/templates/account/signup.html
@@ -4,10 +4,12 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Sign Up</title>
+  <link rel="icon" href="{% static 'images/kawn_logo.svg' %}" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" />
   <link href="{% static 'css/nucleo-icons.css'  %}" rel="stylesheet" />
   <link href="{% static 'css/nucleo-svg.css'  %}" rel="stylesheet" />
@@ -15,46 +17,43 @@
   <link id="pagestyle" href="{% static 'css/soft-ui-dashboard.css'  %}" rel="stylesheet" />
 </head>
 
+<!-- <div class="card z-index-0"> -->
+
 <body class="">
-  <main class="main-content  mt-0">
-    <section class="min-vh-50 mb-0">
-      <div class="page-header align-items-start pt-3 pb-11 m-3 border-radius-lg">
-        <!-- <div class="container">
-          <div class="row justify-content-center">
-            <div class="col-lg-5 text-center mx-auto">
-            </div>
-          </div>
-        </div> -->
-      </div>
-      <div class="container">
-        <div class="row mt-lg-n10 mt-md-n11 mt-n10">
-          <div class="col-xl-4 col-lg-5 col-md-7 mx-auto">
-            <div class="card z-index-0">
-              <div class="card-header text-center pt-5 pb-2">
-                <h5 class="font-weight-bolder text-info text-gradient">{% translate "Sign Up" %}</h5>
-              </div>
-              <div class="card-body">
-                <form role="form text-left" id="signup_form" method="post" action="{% url 'account_signup' %}">
-                  {% csrf_token %}
-                  {{ form|crispy }}
-                  {% if redirect_field_value %}
+  <main class="main-content mt-0">
+    <section>
+      <div class="page-header min-vh-95">
+        <div class="container">
+          <div class="row">
+            <div class="col-xl-4 col-lg-5 col-md-6 d-flex flex-column mx-auto">
+              <div class="card card-plain mt-4 shadow-lg">
+                <div class="card-header pb-0 text-left bg-transparent">
+                  <h3 class="font-weight-bolder text-info text-gradient">
+                    <img src="{% static 'images/kawn_logo.svg' %}" alt="" width="30%"><br>
+                    <h3 class="font-weight-bolder text-info text-gradient">Subscriptions Manager</h3>
+                    <p class="mb-0">Mulai sekarang dengan gratis 15 hari</p></h3>
+                </div>
+                <div class="card-body">
+                  <form role="form text-left" id="signup_form" method="post" action="{% url 'account_signup' %}">
+                    {% csrf_token %}
+                    {{ form|crispy }}
+                    {% if redirect_field_value %}
                     <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-                  </div>
-                  {% endif %}
-                  <div class="text-center">
-                    <button class="btn bg-gradient-info w-100 my-4 mb-2" type="submit">{% translate "Sign Up" %}</button>
-                  </div>
-                  <p class="text-sm mt-3 mb-0">{% blocktranslate %} Already have an account? 
-                    <a href="{{ login_url }}" class="text-info text-gradient font-weight-bolder">Sign in</a>{% endblocktranslate %}
-                  </p>
-                </form>
+                    {% endif %}
+                    <div class="text-center">
+                      <button class="btn bg-gradient-info w-100 my-4 mb-2" type="submit">{% translate "Sign Up"%}</button>
+                    </div>
+                    <p class="text-sm mt-3 mb-0">{% blocktranslate %} Already have an account?
+                      <a href="{{ login_url }}" class="text-info text-gradient font-weight-bolder">Sign in</a>{%endblocktranslate %}
+                    </p>
+                  </form>
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
     </section>
-    
+
     <footer class="footer py-5">
       <div class="container">
         <div class="row">
@@ -82,7 +81,8 @@
         <div class="row">
           <div class="col-8 mx-auto text-center mt-1">
             <p class="mb-0 text-secondary">
-              Copyright © <script>
+              Copyright ©
+              <script>
                 document.write(new Date().getFullYear())
               </script> PT Technomedia Multi Sejahtera.
             </p>
@@ -107,4 +107,5 @@
   </script>
   <script src="{% static 'js/core/soft-ui-dashboard.min.js'  %}"></script>
 </body>
+
 </html>
