--- a/kawn_subscriptions_manager/templates/users/admin/home_admin.html
+++ b/kawn_subscriptions_manager/templates/users/admin/home_admin.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 
+{% block menu-title %}Dashboard{% endblock %}
+{% block dashboard-active %}active{% endblock %}
+
 <!-- {% block sidebar %}
 <li class="nav-item">
     <a class="nav-link  " href="{% url 'users:users-profile'  %}">
