--- a/kawn_subscriptions_manager/templates/users/profile.html
+++ b/kawn_subscriptions_manager/templates/users/profile.html
@@ -1,8 +1,39 @@
 {% extends "base.html" %}
-{% block title %}Profile Page{% endblock title %}
+{% block title %}Users{% endblock title %}
+{% block profile-active %}active{% endblock %}
 {% block content %}
-    <div class="row my-3 p-3">
-        <h1>This is the profile page for {{user.username}}</h1>
+<div class="row">
+    <div class="col-xl-12 col-sm-12 mb-xl-0 mb-4">
+        <div class="card">
+            <div class="card-body p-3 mb-xl-12">
+                <h3>Users</h3><br>
+                <table class="table mb-0">
+                    <thead>
+                        <tr class="text-center">
+                            <th>Name</th>
+                            <th>Email</th>
+                            <th>Username</th>
+                            <th>Access</th>
+                            <th>Action</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr class="text-center">
+                            <td>{{ user.name }}</td>
+                            <td>{{ user.email }}</td>
+                            <td>{{ user.username }}</td>
+                            <td>{{ user.type }}</td>
+                            <td>
+                                <a class="btn btn-info bg-gradient-info" href="{% url 'users:update' %}" role="button">My Info</a>
+                                <a class="btn btn-info bg-gradient-info" href="{% url 'account_email' %}" role="button">E-Mail Settings</a>
+                                <a class="btn btn-info bg-gradient-info" href="{% url 'account_change_password' %}" role="button">Change Password</a>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
     </div>
+</div>
 
 {% endblock content %}
