--- a/kawn_subscriptions_manager/templates/users/sales/home_sales.html
+++ b/kawn_subscriptions_manager/templates/users/sales/home_sales.html
@@ -1,4 +1,8 @@
 {% extends "base.html" %}
+
+{% block menu-title %}Dashboard{% endblock %}
+{% block dashboard-active %}active{% endblock %}
+
 {% block content %}
 <div class="row">
     <div class="col-xl-3 col-sm-6 mb-xl-0 mb-4">
@@ -7,10 +11,9 @@
                 <div class="row">
                     <div class="col-8">
                         <div class="numbers">
-                            <p class="text-sm mb-0 text-capitalize font-weight-bold">Today's Money</p>
+                            <p class="text-sm mb-0 text-capitalize font-weight-bold">Jenis Subscriptions</p>
                             <h5 class="font-weight-bolder mb-0">
-                                $53,000
-                                <span class="text-success text-sm font-weight-bolder">+55%</span>
+                                SILVER
                             </h5>
                         </div>
                     </div>
@@ -29,10 +32,9 @@
                 <div class="row">
                     <div class="col-8">
                         <div class="numbers">
-                            <p class="text-sm mb-0 text-capitalize font-weight-bold">Today's Users</p>
+                            <p class="text-sm mb-0 text-capitalize font-weight-bold">Tanggal Mulai</p>
                             <h5 class="font-weight-bolder mb-0">
-                                2,300
-                                <span class="text-success text-sm font-weight-bolder">+3%</span>
+                                1 Sept 2022
                             </h5>
                         </div>
                     </div>
@@ -51,10 +53,9 @@
                 <div class="row">
                     <div class="col-8">
                         <div class="numbers">
-                            <p class="text-sm mb-0 text-capitalize font-weight-bold">New Clients</p>
+                            <p class="text-sm mb-0 text-capitalize font-weight-bold">Tanggal Selesai</p>
                             <h5 class="font-weight-bolder mb-0">
-                                +3,462
-                                <span class="text-danger text-sm font-weight-bolder">-2%</span>
+                                25 Sept 2022
                             </h5>
                         </div>
                     </div>
@@ -73,10 +74,9 @@
                 <div class="row">
                     <div class="col-8">
                         <div class="numbers">
-                            <p class="text-sm mb-0 text-capitalize font-weight-bold">Sales</p>
+                            <p class="text-sm mb-0 text-capitalize font-weight-bold">Sisa Durasi</p>
                             <h5 class="font-weight-bolder mb-0">
-                                $103,430
-                                <span class="text-success text-sm font-weight-bolder">+5%</span>
+                                10 Hari
                             </h5>
                         </div>
                     </div>
@@ -91,50 +91,22 @@
     </div>
 </div>
 <div class="row mt-4">
-    <div class="col-lg-7 mb-lg-0 mb-4">
-        <div class="card">
-            <div class="card-body p-3">
-                <div class="row">
-                    <div class="col-lg-6">
-                        <div class="d-flex flex-column h-100">
-                            <p class="mb-1 pt-2 text-bold">Built by developers</p>
-                            <h5 class="font-weight-bolder">Dashboard Sales</h5>
-                            <p class="mb-5">From colors, cards, typography to complex elements, you will find the full
-                                documentation.</p>
-                            <a class="text-body text-sm font-weight-bold mb-0 icon-move-right mt-auto"
-                                href="javascript:;">
-                                Read More
-                                <i class="fas fa-arrow-right text-sm ms-1" aria-hidden="true"></i>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-lg-5 ms-auto text-center mt-5 mt-lg-0">
-                        <!-- <div class="bg-gradient-primary border-radius-lg h-100">
-                <img src="../assets/img/shapes/waves-white.svg" class="position-absolute h-100 w-50 top-0 d-lg-block d-none" alt="waves">
-                <div class="position-relative d-flex align-items-center justify-content-center h-100">
-                  <img class="w-100 position-relative z-index-2 pt-4" src="../assets/img/illustrations/rocket-white.png" alt="rocket">
-                </div>
-              </div> -->
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="col-lg-5">
+    {% for subscriptionplan in SubscriptionPlans %}
+    <div class="col-lg-4 mt-3">
         <div class="card h-100 p-3">
             <div class="overflow-hidden position-relative border-radius-lg bg-cover h-100">
                 <span class="mask"></span>
                 <div class="card-body position-relative z-index-1 d-flex flex-column h-100 p-3">
-                    <h5 class="font-weight-bolder mb-4 pt-2">Work with the rockets</h5>
+                    <p class="mb-1 pt-2 text-bold text-center">{{ subscriptionplan.name }}</p>
+                    <h5 class="font-weight-bolder mb-4 pt-2 text-center">Rp {{ subscriptionplan.price}}</h5>
+                    <p class="text-center">Duration : {{ subscriptionplan.duration}} month</p>
                     <p class="">Wealth creation is an evolutionarily recent positive-sum game. It is all about who take
                         the opportunity first.</p>
-                    <a class="text-sm font-weight-bold mb-0 icon-move-right mt-auto" href="javascript:;">
-                        Read More
-                        <i class="fas fa-arrow-right text-sm ms-1" aria-hidden="true"></i>
-                    </a>
+                    <a href="{% url 'users:subscribe' subscriptionplan.id %}" class="btn bg-gradient-info w-100 mt-4 mb-0">Subscribe</a>
                 </div>
             </div>
         </div>
     </div>
+    {% endfor %}
 </div>
 {% endblock content %}
