--- a/kawn_subscriptions_manager/templates/users/user_detail.html
+++ b/kawn_subscriptions_manager/templates/users/user_detail.html
@@ -1,34 +1,40 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block title %}User: {{ object.username }}{% endblock %}
-
+{% block title %}Users{% endblock title %}
 {% block content %}
-<div class="container">
-
-  <div class="row">
-    <div class="col-sm-12">
-
-      <h2>{{ object.username }}</h2>
-      {% if object.name %}
-        <p>{{ object.name }}</p>
-      {% endif %}
-    </div>
-  </div>
-
-{% if object == request.user %}
-<!-- Action buttons -->
 <div class="row">
-
-  <div class="col-sm-12">
-    <a class="btn btn-primary" href="{% url 'users:update' %}" role="button">My Info</a>
-    <a class="btn btn-primary" href="{% url 'account_email' %}" role="button">E-Mail</a>
-    <!-- Your Stuff: Custom user template urls -->
-  </div>
-
+    <div class="col-xl-12 col-sm-12 mb-xl-0 mb-4">
+        <div class="card">
+            <div class="card-body p-3 mb-xl-12">
+                <h3>Users</h3><br>
+                <table class="table mb-0">
+                    <thead>
+                        <tr class="text-center">
+                            <th>Name</th>
+                            <th>Email</th>
+                            <th>Username</th>
+                            <th>Access</th>
+                            <th>Action</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr class="text-center">
+                            <td>{{ user.name }}</td>
+                            <td>{{ user.email }}</td>
+                            <td>{{ user.username }}</td>
+                            <td>{{ user.type }}</td>
+                            <td>
+                                <a class="btn btn-info bg-gradient-info" href="{% url 'users:update' %}" role="button">My Info</a>
+                                <a class="btn btn-info bg-gradient-info" href="{% url 'account_email' %}" role="button">E-Mail Settings</a>
+                                <a class="btn btn-info bg-gradient-info" href="{% url 'account_change_password' %}" role="button">Change Password</a>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
 </div>
-<!-- End Action buttons -->
-{% endif %}
 
-</div>
 {% endblock content %}
