--- a/kawn_subscriptions_manager/templates/users/user_form.html
+++ b/kawn_subscriptions_manager/templates/users/user_form.html
@@ -1,17 +1,25 @@
 {% extends "base.html" %}
 {% load crispy_forms_tags %}
 
-{% block title %}{{ user.username }}{% endblock %}
+{% block title %} Profile {% endblock %}
 
 {% block content %}
-  <h1>{{ user.username }}</h1>
-  <form class="form-horizontal" method="post" action="{% url 'users:update' %}">
-    {% csrf_token %}
-    {{ form|crispy }}
-    <div class="control-group">
-      <div class="controls">
-        <button type="submit" class="btn btn-primary">Update</button>
+<div class="row">
+  <div class="col-xl-12 col-sm-12 mb-xl-0 mb-4">
+    <div class="card">
+      <div class="card-body">
+        <h1>Hi, {{ user.username }}</h1>
+        <form class="form-horizontal" method="post" action="{% url 'users:update' %}">
+          {% csrf_token %}
+          {{ form|crispy }}
+          <div class="control-group">
+            <div class="controls">
+              <button type="submit" class="btn btn-info bg-gradient-info">Update</button>
+            </div>
+          </div>
+        </form>
       </div>
     </div>
-  </form>
+  </div>
+</div>
 {% endblock %}
