Update directory structure

--- a/kawn_subscriptions_manager/templates/users/admin/add_users.html
+++ b/kawn_subscriptions_manager/templates/users/admin/add_users.html
@@ -2,7 +2,7 @@
 
 {% load crispy_forms_tags %}
 
-{% block menu-title %}Add Supervisor{% endblock %}
+{% block menu-title %}Add User{% endblock %}
 {% block users-active %}active{% endblock %}
 
 {% block content %}
@@ -13,7 +13,7 @@
         <div class="row">
           <div class="col-lg-10">
             <div class="d-flex flex-column h-100">
-              <h5 class="font-weight-bolder">Add Supervisor</h5>
+              <h5 class="font-weight-bolder">Add User</h5>
               <form method="post" novalidate>
                 {% csrf_token %}
                 <input type="hidden" name="next" value="{{ next }}">
@@ -23,12 +23,6 @@
             </div>
           </div>
           <div class="col-lg-5 ms-auto text-center mt-5 mt-lg-0">
-            <!-- <div class="bg-gradient-primary border-radius-lg h-100">
-              <img src="../assets/img/shapes/waves-white.svg" class="position-absolute h-100 w-50 top-0 d-lg-block d-none" alt="waves">
-              <div class="position-relative d-flex align-items-center justify-content-center h-100">
-                <img class="w-100 position-relative z-index-2 pt-4" src="../assets/img/illustrations/rocket-white.png" alt="rocket">
-              </div>
-            </div> -->
           </div>
         </div>
       </div>
