--- a/kawn_subscriptions_manager/templates/subscriptions/list_subscription_plan.html
+++ b/kawn_subscriptions_manager/templates/subscriptions/list_subscription_plan.html
@@ -10,7 +10,7 @@
       <div class="card-header pb-0 justify-content-lg-between">
         <h6>Subscription Plans</h6>
       </div>
-      <a href="{% url 'users:addSubscriptionPlan' %}" class="btn bg-gradient-info col-md-2 ms-3">Add Subscription Plan</a>
+      <a href="{% url 'subscriptions:addSubscriptionPlan' %}" class="btn bg-gradient-info col-md-2 ms-3">Add Subscription Plan</a>
       <div class="card-body px-0 pt-0 pb-2">
         <div class="table-responsive p-0">
           <table class="table align-items-center mb-0">
@@ -23,23 +23,23 @@
               </tr>
             </thead>
             <tbody>
-              {% for data in results %}
+              {% for data in object_list %}
               <tr>
                 <td>
                   <div class="d-flex px-2 py-1 ">
                     <div class="d-flex flex-column justify-content-center text-center">
-                      <p class="text-xs text-secondary mb-0">{{ data.0 }}</p>
+                      <p class="text-xs text-secondary mb-0">{{ data.name }}</p>
                     </div>
                   </div>
                 </td>
                 <td class="">
-                  <p class="text-xs font-weight-bold mb-0">{{ data.1 }} Month</p>
+                  <p class="text-xs font-weight-bold mb-0">{{ data.duration }} Month</p>
                 </td>
                 <td class="align-middle text-center text-sm">
-                    <p class="text-xs text-secondary mb-0">Rp {{ data.2 }}</p>
+                    <p class="text-xs text-secondary mb-0">Rp {{ data.price }}</p>
                 </td>
                 <td class="align-middle text-center text-sm">
-                  <a href="{% url 'users:editSubscriptionPlan' %}" class="badge bg-gradient-success">Edit</a>
+                  <a href="{% url 'subscriptions:editSubscriptionPlan' %}" class="badge bg-gradient-success">Edit</a>
                   <a href="" class="badge bg-gradient-danger">Deactivate</a>
                 </td>
               </tr>
