--- a/kawn_subscriptions_manager/templates/subscriptions/list_user_subscriptions.html
+++ b/kawn_subscriptions_manager/templates/subscriptions/list_user_subscriptions.html
@@ -14,7 +14,7 @@
         <div class="table-responsive p-0">
           <table class="table align-items-center mb-0">
             <thead>
-              <tr>
+              <tr class="text-center">
                 <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Customer Name</th>
                 <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Subscription Plan
                 </th>
@@ -29,7 +29,7 @@
             </thead>
             <tbody>
               {% for data in results %}
-              <tr>
+              <tr class="text-center">
                 <td>
                   <div class="d-flex px-2 py-1 ">
                     <div class="d-flex flex-column justify-content-center text-center">
