Update Subscription Plans

--- a/kawn_subscriptions_manager/templates/layouts/sidebar.html
+++ b/kawn_subscriptions_manager/templates/layouts/sidebar.html
@@ -39,17 +39,17 @@
                         class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
                         <i class="fa-solid fa-diagram-next"></i>
                     </div>
-                    <span class="nav-link-text ms-1">Subscription Plan</span>
+                    <span class="nav-link-text ms-1">Subscription Plans</span>
                 </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link  {% block listusersubscriptions-active %}{% endblock %}"
-                    href="{% url 'subscriptions:listUserSubscription'  %}">
+                    href="{% url 'subscriptions:customerSubscription'  %}">
                     <div
                         class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
                         <i class="fa-solid fa-list"></i>
                     </div>
-                    <span class="nav-link-text ms-1">List User Subscription</span>
+                    <span class="nav-link-text ms-1">Customer Subscriptions</span>
                 </a>
             </li>
             <li class="nav-item">
