--- a/kawn_subscriptions_manager/templates/subscriptions/subscription_plans/update_subscription_plan.html
+++ b/kawn_subscriptions_manager/templates/subscriptions/subscription_plans/update_subscription_plan.html
@@ -2,7 +2,7 @@
 
 {% load crispy_forms_tags %}
 
-{% block menu-title %}Edit Subscription Plan{% endblock %}
+{% block menu-title %}Update Subscription Plan{% endblock %}
 {% block listsubscriptionplan-active %}active{% endblock %}
 
 {% block content %}
@@ -13,12 +13,12 @@
         <div class="row">
           <div class="col-lg-10">
             <div class="d-flex flex-column h-100">
-              <h5 class="font-weight-bolder">Add Subscription Plan</h5>
+              <h5 class="font-weight-bolder">Update Subscription Plan</h5>
               <form method="post" novalidate>
                 {% csrf_token %}
                 <input type="hidden" name="next" value="{{ next }}">
                 {{ form|crispy }}
-                <button type="submit" class="btn bg-gradient-info w-100 mt-4 mb-0">ADD</button>
+                <button type="submit" class="btn bg-gradient-info w-100 mt-4 mb-0">Update</button>
               </form>
             </div>
           </div>
