--- a/kawn_subscriptions_manager/static/css/soft-ui-dashboard.css
+++ b/kawn_subscriptions_manager/static/css/soft-ui-dashboard.css
@@ -2903,9 +2903,9 @@ textarea.form-control-lg {
 }
 
 .form-select:focus {
-  border-color: #e293d3;
+  border-color: #17c1e8;
   outline: 0;
-  box-shadow: 0 0 0 2px #e9aede;
+  box-shadow: 0 0 0 2px #a1d3de;
 }
 
 .form-select[multiple],
