--- a/kawn_subscriptions_manager/templates/account/login.html
+++ b/kawn_subscriptions_manager/templates/account/login.html
@@ -39,6 +39,14 @@
                                     <img src="{% static 'images/kawn_logo.svg' %}" alt="" width="30%"><br>
                                     <h3 class="font-weight-bolder text-info text-gradient">Subscriptions Manager</h3>
                                     <p class="mb-0">Enter your email and password to sign in</p>
+                                    {% for message in messages %}
+                                    <div class="alert alert-success alert-dismissible fade show {{ message.tags }}"
+                                        role="alert">
+                                        <strong>{{ message }}</strong>
+                                        <button type="button" class="btn-close" data-bs-dismiss="alert"
+                                            aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                    </div>
+                                    {% endfor %}
                                 </div>
                                 <div class="card-body">
                                     <form action="" method="post" class="form-group">
