--- a/kawn_subscriptions_manager/templates/dashboard/dashboard.html
+++ b/kawn_subscriptions_manager/templates/dashboard/dashboard.html
@@ -5,6 +5,13 @@
 
 {% block content %}
 <div class="row">
+    {% for message in messages %}
+    <div class="alert alert-success alert-dismissible fade show {{ message.tags }}" role="alert">
+        <strong>{{ message }}</strong>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"><span
+                aria-hidden="true">&times;</span></button>
+    </div>
+    {% endfor %}
     <div class="col-xl-3 col-sm-6 mb-xl-0 mb-4">
         <div class="card">
             <div class="card-body p-3">
