--- a/kawn_subscriptions_manager/templates/subscriptions/client_subscriptions/add_client_subscription.html
+++ b/kawn_subscriptions_manager/templates/subscriptions/client_subscriptions/add_client_subscription.html
@@ -2,7 +2,7 @@
 
 {% load crispy_forms_tags %}
 
-{% block menu-title %}Add Subscription Plan{% endblock %}
+{% block menu-title %}Add Client Subscription{% endblock %}
 {% block dashboard-active %}active{% endblock %}
 
 {% block content %}
@@ -13,7 +13,7 @@
         <div class="row">
           <div class="col-lg-10">
             <div class="d-flex flex-column h-100">
-              <h5 class="font-weight-bolder">Add Subscription</h5>
+              <h5 class="font-weight-bolder">Add Client Subscription</h5>
               <form method="post" novalidate>
                 {% csrf_token %}
                 <input type="hidden" name="next" value="{{ next }}">
