--- a/kawn_subscriptions_manager/templates/subscriptions/subscription_plans/list_subscription_plan.html
+++ b/kawn_subscriptions_manager/templates/subscriptions/subscription_plans/list_subscription_plan.html
@@ -8,50 +8,63 @@
   <div class="col-12">
     <div class="card mb-4">
       <div class="card-header pb-0 justify-content-lg-between">
+
+        {% for message in messages %}
+        <div class="alert alert-success alert-dismissible fade show {{ message.tags }}" role="alert">
+          <strong >{{ message }}</strong>
+          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        </div>
+        {% endfor %}
+
         <h5 class="font-weight-bolder">Subscription Plans</h5>
       </div>
-      <a href="{% url 'subscriptions:addSubscriptionPlan' %}" class="btn bg-gradient-info col-md-2 ms-3">Add Subscription Plans</a>
+      <a href="{% url 'subscriptions:addSubscriptionPlan' %}" class="btn bg-gradient-info ms-3 w-20 mt-2">Add
+        Subscription Plans</a>
       <div class="card-body px-0 pt-0 pb-2">
         <div class="table-responsive p-0">
           <table class="table align-items-center mb-0">
             <thead>
               <tr>
-                <th class="text-uppercase text-bold text-xxs font-weight-bolder opacity-7">Name</th>
-                <th class="text-uppercase text-bold text-xxs font-weight-bolder opacity-7 ps-2">Duration</th>
-                <th class="text-center text-uppercase text-bold text-xxs font-weight-bolder opacity-7">Price</th>
-                <th class="text-center text-uppercase text-bold text-xxs font-weight-bolder opacity-7">Status</th>
-                <th class="text-center text-uppercase text-bold text-xxs font-weight-bolder opacity-7">Action</th>
+                <th class="text-uppercase text-bold text-xxs font-weight-bolder">Name</th>
+                <th class="text-uppercase text-bold text-xxs font-weight-bolder ps-2">Duration</th>
+                <th class="text-uppercase text-bold text-xxs font-weight-bolder ps-2">Price</th>
+                <th class="text-uppercase text-bold text-xxs font-weight-bolder ps-2">Status</th>
+                <th class="text-uppercase text-bold text-xxs font-weight-bolder">Action</th>
               </tr>
             </thead>
             <tbody>
               {% for data in object_list %}
               <tr>
-                <td>
-                  <div class="d-flex px-2 py-1 ">
-                    <div class="d-flex flex-column justify-content-center text-center">
-                      <p class="text-xs font-weight-bold mb-0">{{ data.name }}</p>
-                    </div>
-                  </div>
+                <td class="text-sm px-4">
+                  <p class="text-xs font-weight-bold mb-0">{{ data.name }}</p>
                 </td>
-                <td class="">
+                <td class="align-middle text-sm">
                   <p class="text-xs font-weight-bold mb-0">{{ data.duration }} Month</p>
                 </td>
-                <td class="align-middle text-center text-sm">
-                    <p class="text-xs font-weight-bold mb-0">Rp {{ data.price }}</p>
+                <td class="align-middle text-sm">
+                  <p class="text-xs font-weight-bold mb-0">Rp {{ data.price }}</p>
                 </td>
-                <td class="align-middle text-center text-sm">
+                <td class="align-middle text-sm">
                   {% if data.is_active %}
                   <p class="text-xs font-weight-bold mb-0">Active</p>
                   {% else %}
                   <p class="text-xs font-weight-bold mb-0">Not Active</p>
                   {% endif %}
-              </td>
-                <td class="align-middle text-center text-sm">
+                </td>
+                <td class="align-middle text-sm">
                   <a href="{% url 'subscriptions:updateSubscriptionPlan' data.id %}" class="badge bg-warning">Edit</a>
                   {% if data.is_active %}
-                  <a href="{% url 'subscriptions:deactivateSubscriptionPlan' data.id %}" class="badge bg-gradient-danger">Deactivate</a>
+                  <a href="{% url 'subscriptions:deactivateSubscriptionPlan' data.id %}"
+                    class="badge bg-gradient-danger">Deactivate</a>
                   {% else %}
-                  <a href="{% url 'subscriptions:activateSubscriptionPlan' data.id %}" class="badge bg-gradient-info">Activate</a>
+                  <a href="{% url 'subscriptions:activateSubscriptionPlan' data.id %}"
+                    class="badge bg-gradient-info">Activate</a>
+                  {% endif %}
+                  {% if data.is_active == False %}
+                  <form id="form-id" action="{% url 'subscriptions:delateSubscriptionPlan' data.id %}" method="post">
+                    {% csrf_token %}
+                    <a href="#" onclick="document.forms['form-id'].submit();" class="badge bg-gradient-danger"> Delete </a>
+                  </form>
                   {% endif %}
                 </td>
               </tr>
