Update users template

--- a/kawn_subscriptions_manager/templates/account/password_change.html
+++ b/kawn_subscriptions_manager/templates/account/password_change.html
@@ -14,7 +14,7 @@
             <form method="POST" action="{% url 'account_change_password' %}" class="card card-body">
                 {% csrf_token %}
                 {{ form|crispy }}
-                <button class="btn btn-info bg-gradient-info" type="submit" name="action">{% translate "Change Password"%}</button>
+                <button class="btn bg-gradient-info w-100 mt-2 mb-0" type="submit" name="action">{% translate "Change Password"%}</button>
             </form>
         </div>
     </div>
