--- a/kawn_subscriptions_manager/templates/users/password_reset.html
+++ b/kawn_subscriptions_manager/templates/users/password_reset.html
@@ -11,7 +11,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Email Confirm</title>
+    <title>Reset Password</title>
     <!--     Fonts and icons     -->
     <link rel="icon" href="{% static 'images/kawn_logo.svg' %}" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" />
@@ -42,23 +42,27 @@
                                 <div class="card-header pb-0 text-left bg-transparent">
                                     <img src="{% static 'images/kawn_logo.svg' %}" alt="" width="30%"><br>
                                     <h3 class="font-weight-bolder text-info text-gradient">Subscriptions Manager</h3>
+                                    <p class="mb-0">Forgotten your password? Enter your e-mail address below, and
+                                        we'll send you an e-mail allowing you to reset it.
+                                    </p>
                                 </div>
                                 <div class="card-body">
-                                    {% if confirmation %}
-                                    {% user_display confirmation.email_address.user as user_display %}
-
-                                    <p>{% blocktranslate with confirmation.email_address.email as email %}Please confirm
-                                        that <a href="mailto:{{ email }}">{{ email }}</a> is an e-mail address for user
-                                        {{ user_display }}.{% endblocktranslate %}</p>
-                                    <form method="post" action="{% url 'account_confirm_email' confirmation.key %}">
+                                    <form method="POST" action="{% url 'account_reset_password' %}" class="form-group">
                                         {% csrf_token %}
-                                        <button class="btn btn-info bg-gradient-info" type="submit">{% translate 'Confirm' %}</button>
+                                        {{ form|crispy }}
+                                        <input class="btn bg-gradient-info w-100 mt-4 mb-0" type="submit" name="action"
+                                            value="{% translate 'Reset My Password' %}" />
                                     </form>
-                                    {% else %}
-                                    {% url 'account_email' as email_url %}
-                                    <p>{% blocktranslate %}This e-mail confirmation link expired or is invalid. Please
-                                        <a href="{{ email_url }}">issue a new e-mail confirmation request</a>.{% endblocktranslate %}</p>
-                                    {% endif %}
+                                    <p>
+                                        {% blocktranslate %}
+                                        Please contact us if you have any trouble resetting your password.
+                                        {% endblocktranslate %}
+                                    </p>
+                                    <div class="card-footer text-center pt-0 px-lg-2 px-1">
+                                        <p class="mb-0 text-sm mx-auto">
+                                            <a href="{{ login_url }}" class="text-info text-gradient font-weight-bold">Back to Login</a>
+                                        </p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
