--- a/kawn_subscriptions_manager/templates/account/email.html
+++ b/kawn_subscriptions_manager/templates/account/email.html
@@ -1,4 +1,3 @@
-
 {% extends "account/base.html" %}
 
 {% load i18n %}
@@ -10,7 +9,7 @@
 <div class="row">
   <div class="col-xl-12 col-sm-12 mb-xl-0 mb-4">
     <div class="card">
-      <div class="card-body p-3 mb-xl-12">
+      <div class="card-body">
         <h1>{% translate "E-mail Addresses" %}</h1>
 
         {% if user.emailaddress_set.all %}
