--- a/kawn_subscriptions_manager/templates/account/login.html
+++ b/kawn_subscriptions_manager/templates/account/login.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load i18n %}
 {% load crispy_forms_tags %}
 <!DOCTYPE html>
 <html lang="en">
@@ -52,15 +53,14 @@
                                     <form action="" method="post" class="form-group">
                                         {%csrf_token%}
                                         {{form|crispy}}
-                                        <input class="btn bg-gradient-info w-100 mt-4 mb-0" type="submit" value="Login">
+                                        <input class="btn bg-gradient-info w-100 mt-2 mb-0" type="submit" value="Login">
                                     </form>
                                 </div>
-                                <div class="card-footer text-center pt-0 px-lg-2 px-1">
-                                    <!-- <p class="mb-4 text-sm mx-auto">
-                                        Don't have an account?
-                                        <a href="{{ signup_url }}" class="text-info text-gradient font-weight-bold">Sign
-                                            up</a>
-                                    </p> -->
+                                <div class="card-footer text-center pt-0 mb-3 px-lg-2 px-1">
+                                    <p class="mb-0 text-sm mx-auto">
+                                        <a href="{% url 'account_reset_password' %}" class="text-info text-gradient font-weight-bold">
+                                            Forgot Password?</a>
+                                    </p>
                                 </div>
                             </div>
                         </div>
