--- a/kawn_subscriptions_manager/templates/account/password_reset.html
+++ b/kawn_subscriptions_manager/templates/account/password_reset.html
@@ -1,25 +1,125 @@
-{% extends "account/base.html" %}
-
+{% load static %}
 {% load i18n %}
 {% load account %}
 {% load crispy_forms_tags %}
 
-{% block head_title %}{% translate "Password Reset" %}{% endblock %}
-
 {% block inner %}
+<!DOCTYPE html>
+<html lang="en">
 
-    <h1>{% translate "Password Reset" %}</h1>
-    {% if user.is_authenticated %}
-    {% include "account/snippets/already_logged_in.html" %}
-    {% endif %}
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Password Reset</title>
+    <!--     Fonts and icons     -->
+    <link rel="icon" href="{% static 'images/kawn_logo.svg' %}" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/css/bootstrap.min.css"
+        integrity="sha512-GQGU0fMMi238uA+a/bdWJfpUGKUkBdgfFdgBm72SUQ6BeyWjoY/ton0tEjH+OSH9iP4Dfh+7HM0I9f5eR0L/4w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.min.js"
+        integrity="sha512-OvBgP9A2JBgiRad/mM36mkzXSXaJE9BEIENnVEmeZdITvwT09xnxLtT4twkCa8m/loMbPHsvPl0T8lRGVBwjlQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <!-- Nucleo Icons -->
+    <link href="{% static 'css/nucleo-icons.css' %}" rel="stylesheet" />
+    <link href="{% static 'css/nucleo-svg.css' %}" rel="stylesheet" />
+    <!-- Font Awesome Icons -->
+    <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
+    <link href="{% static 'css/nucleo-svg.css' %}" rel="stylesheet" />
+    <!-- CSS Files -->
+    <link id="pagestyle" href="{% static 'css/soft-ui-dashboard.css' %}" rel="stylesheet" />
+</head>
 
-    <p>{% translate "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
+<body>
+    <main class="main-content  mt-0">
+        <section>
+            <div class="page-header min-vh-95">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-xl-4 col-lg-5 col-md-6 d-flex flex-column mx-auto">
+                            <div class="card card-plain mt-4 shadow-lg">
+                                <div class="card-header pb-0 text-left bg-transparent">
+                                    <img src="{% static 'images/kawn_logo.svg' %}" alt="" width="30%"><br>
+                                    <h3 class="font-weight-bolder text-info text-gradient">Subscriptions Manager</h3><br>
+                                    <strong class="mb-0">Enter your email address, and we'll send you an email to reset your password.
+                                    </strong>
+                                </div>
+                                <div class="card-body">
+                                    <form method="POST" action="{% url 'account_reset_password' %}" class="form-group">
+                                        {% csrf_token %}
+                                        {{ form|crispy }}
+                                        <input class="btn bg-gradient-info w-100 mt-2 mb-0" type="submit" name="action" value="{% translate 'Reset My Password' %}" />
+                                    </form>
+                                    <div class="card-footer text-center pt-2 mt-2 px-lg-2 px-1">
+                                        <p class="mb-0 pb-0 text-sm mx-auto">
+                                            <a href="{{ login_url }}" class="text-info text-gradient font-weight-bold">Back to Home</a>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <!-- -------- START FOOTER 3 w/ COMPANY DESCRIPTION WITH LINKS & SOCIAL ICONS & COPYRIGHT ------- -->
+    <footer class="footer py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 mb-4 mx-auto text-center">
+                    <a href="javascript:;" target="_blank" class="text-secondary me-xl-5 me-3 mb-sm-0 mb-2">
+                        Company
+                    </a>
+                    <a href="javascript:;" target="_blank" class="text-secondary me-xl-5 me-3 mb-sm-0 mb-2">
+                        About Us
+                    </a>
+                    <a href="javascript:;" target="_blank" class="text-secondary me-xl-5 me-3 mb-sm-0 mb-2">
+                        Team
+                    </a>
+                    <a href="javascript:;" target="_blank" class="text-secondary me-xl-5 me-3 mb-sm-0 mb-2">
+                        Products
+                    </a>
+                    <a href="javascript:;" target="_blank" class="text-secondary me-xl-5 me-3 mb-sm-0 mb-2">
+                        Blog
+                    </a>
+                    <a href="javascript:;" target="_blank" class="text-secondary me-xl-5 me-3 mb-sm-0 mb-2">
+                        Pricing
+                    </a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-8 mx-auto text-center mt-1">
+                    <p class="mb-0 text-secondary">
+                        Copyright ©
+                        <script>
+                            document.write(new Date().getFullYear())
+                        </script> PT Technomedia Multi Sejahtera.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!--   Core JS Files   -->
+    <script src="{% static '/js/core/popper.min.js' %}"></script>
+    <script src="{% static '/js/core/bootstrap.min.js' %}"></script>
+    <script src="{% static '/js/plugins/perfect-scrollbar.min.js' %}"></script>
+    <script src="{% static '/js/plugins/smooth-scrollbar.min.js' %}"></script>
+    <script>
+        var win = navigator.platform.indexOf('Win') > -1;
+        if (win && document.querySelector('#sidenav-scrollbar')) {
+            var options = {
+                damping: '0.5'
+            }
+            Scrollbar.init(document.querySelector('#sidenav-scrollbar'), options);
+        }
+    </script>
+    <!-- Github buttons -->
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
+    <!-- Control Center for Soft Dashboard: parallax effects, scripts for the example pages etc -->
+    <script src="{% static '/js/soft-ui-dashboard.min.js?v=1.0.6' %}"></script>
+</body>
 
-    <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
-        {% csrf_token %}
-        {{ form|crispy }}
-        <input class="btn btn-info bg-gradient-info" type="submit" value="{% translate 'Reset My Password' %}" />
-    </form>
-
-    <p>{% blocktranslate %}Please contact us if you have any trouble resetting your password.{% endblocktranslate %}</p>
+</html>
 {% endblock %}
