--- a/kawn_subscriptions_manager/templates/account/password_reset_from_key.html
+++ b/kawn_subscriptions_manager/templates/account/password_reset_from_key.html
@@ -1,24 +1,140 @@
-{% extends "account/base.html" %}
-
+{% load static %}
 {% load i18n %}
 {% load crispy_forms_tags %}
-{% block head_title %}{% translate "Change Password" %}{% endblock %}
 
 {% block inner %}
-    <h1>{% if token_fail %}{% translate "Bad Token" %}{% else %}{% translate "Change Password" %}{% endif %}</h1>
+<!DOCTYPE html>
+<html lang="en">
 
-    {% if token_fail %}
-        {% url 'account_reset_password' as passwd_reset_url %}
-        <p>{% blocktranslate %}The password reset link was invalid, possibly because it has already been used.  Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktranslate %}</p>
-    {% else %}
-        {% if form %}
-            <form method="POST" action=".">
-                {% csrf_token %}
-                {{ form|crispy }}
-                <input class="btn btn-info bg-gradient-info" type="submit" name="action" value="{% translate 'change password' %}"/>
-            </form>
-        {% else %}
-            <p>{% translate 'Your password is now changed.' %}</p>
-        {% endif %}
-    {% endif %}
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Password Reset</title>
+    <!--     Fonts and icons     -->
+    <link rel="icon" href="{% static 'images/kawn_logo.svg' %}" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/css/bootstrap.min.css"
+        integrity="sha512-GQGU0fMMi238uA+a/bdWJfpUGKUkBdgfFdgBm72SUQ6BeyWjoY/ton0tEjH+OSH9iP4Dfh+7HM0I9f5eR0L/4w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.min.js"
+        integrity="sha512-OvBgP9A2JBgiRad/mM36mkzXSXaJE9BEIENnVEmeZdITvwT09xnxLtT4twkCa8m/loMbPHsvPl0T8lRGVBwjlQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <!-- Nucleo Icons -->
+    <link href="{% static 'css/nucleo-icons.css' %}" rel="stylesheet" />
+    <link href="{% static 'css/nucleo-svg.css' %}" rel="stylesheet" />
+    <!-- Font Awesome Icons -->
+    <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
+    <link href="{% static 'css/nucleo-svg.css' %}" rel="stylesheet" />
+    <!-- CSS Files -->
+    <link id="pagestyle" href="{% static 'css/soft-ui-dashboard.css' %}" rel="stylesheet" />
+</head>
+
+<body>
+    <main class="main-content  mt-0">
+        <section>
+            <div class="page-header min-vh-95">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-xl-4 col-lg-5 col-md-6 d-flex flex-column mx-auto">
+                            <div class="card card-plain mt-4 shadow-lg">
+                                <div class="card-header pb-0 text-left bg-transparent">
+                                    <img src="{% static 'images/kawn_logo.svg' %}" alt="" width="30%"><br>
+                                    <h3 class="font-weight-bolder text-info text-gradient">Subscriptions Manager</h3>
+                                    <br>
+                                    <h4><strong>
+                                        {% if token_fail %}{% translate "Bad Token" %}{% else %}{% translate "Change Password" %}{% endif %}</strong>
+                                    </h4>
+                                    {% if token_fail %}
+                                    {% url 'account_reset_password' as passwd_reset_url %}
+                                    <p>
+                                        {% blocktranslate %}
+                                        The password reset link was invalid, possibly because it has already been used. 
+                                        Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.
+                                        {% endblocktranslate %}
+                                    </p>
+                                    {% else %}
+                                </div>
+                                {% if form %}
+                                <div class="card-body">
+                                    <form method="POST" action=".">
+                                        {% csrf_token %}
+                                        {{ form|crispy }}
+                                        <input class="btn bg-gradient-info w-100 mt-2 mb-4" type="submit" name="action" value="{% translate 'Change Password' %}" />
+                                    </form>
+                                    {% else %}
+                                    <p>{% translate 'Your password is now changed.' %}</p>
+                                    {% endif %}
+                                    {% endif %}
+                                    <div class="card-footer text-center pt-2 mt-2 px-lg-2 px-1">
+                                        <p class="mb-0 pb-0 text-sm mx-auto">
+                                            <a href="/" class="text-info text-gradient font-weight-bold">Back to Home</a>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <!-- -------- START FOOTER 3 w/ COMPANY DESCRIPTION WITH LINKS & SOCIAL ICONS & COPYRIGHT ------- -->
+    <footer class="footer py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 mb-4 mx-auto text-center">
+                    <a href="javascript:;" target="_blank" class="text-secondary me-xl-5 me-3 mb-sm-0 mb-2">
+                        Company
+                    </a>
+                    <a href="javascript:;" target="_blank" class="text-secondary me-xl-5 me-3 mb-sm-0 mb-2">
+                        About Us
+                    </a>
+                    <a href="javascript:;" target="_blank" class="text-secondary me-xl-5 me-3 mb-sm-0 mb-2">
+                        Team
+                    </a>
+                    <a href="javascript:;" target="_blank" class="text-secondary me-xl-5 me-3 mb-sm-0 mb-2">
+                        Products
+                    </a>
+                    <a href="javascript:;" target="_blank" class="text-secondary me-xl-5 me-3 mb-sm-0 mb-2">
+                        Blog
+                    </a>
+                    <a href="javascript:;" target="_blank" class="text-secondary me-xl-5 me-3 mb-sm-0 mb-2">
+                        Pricing
+                    </a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-8 mx-auto text-center mt-1">
+                    <p class="mb-0 text-secondary">
+                        Copyright ©
+                        <script>
+                            document.write(new Date().getFullYear())
+                        </script> PT Technomedia Multi Sejahtera.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!--   Core JS Files   -->
+    <script src="{% static '/js/core/popper.min.js' %}"></script>
+    <script src="{% static '/js/core/bootstrap.min.js' %}"></script>
+    <script src="{% static '/js/plugins/perfect-scrollbar.min.js' %}"></script>
+    <script src="{% static '/js/plugins/smooth-scrollbar.min.js' %}"></script>
+    <script>
+        var win = navigator.platform.indexOf('Win') > -1;
+        if (win && document.querySelector('#sidenav-scrollbar')) {
+            var options = {
+                damping: '0.5'
+            }
+            Scrollbar.init(document.querySelector('#sidenav-scrollbar'), options);
+        }
+    </script>
+    <!-- Github buttons -->
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
+    <!-- Control Center for Soft Dashboard: parallax effects, scripts for the example pages etc -->
+    <script src="{% static '/js/soft-ui-dashboard.min.js?v=1.0.6' %}"></script>
+</body>
+
+</html>
 {% endblock %}
