--- a/kawn_subscriptions_manager/templates/users/admin/add_users.html
+++ b/kawn_subscriptions_manager/templates/users/admin/add_users.html
@@ -3,7 +3,7 @@
 {% load crispy_forms_tags %}
 
 {% block menu-title %}Add User{% endblock %}
-{% block users-active %}active{% endblock %}
+{% block profile-active %}active{% endblock %}
 
 {% block content %}
 <div class="row">
@@ -13,7 +13,7 @@
         <div class="row">
           <div class="col-lg-10">
             <div class="d-flex flex-column h-100">
-              <h5 class="font-weight-bolder">Add User</h5>
+              <h4 class="font-weight-bolder mb-4">Add User</h4>
               <form method="post" novalidate>
                 {% csrf_token %}
                 <input type="hidden" name="next" value="{{ next }}">
