--- a/kawn_subscriptions_manager/templates/users/user_list.html
+++ b/kawn_subscriptions_manager/templates/users/user_list.html
@@ -12,7 +12,7 @@
             </div>
             <div class="row">
                 <a href="{% url 'users:addUsers' %}" class="btn bg-gradient-info col-md-2 ms-4">Add User</a>
-                <!-- <a href="{% url 'users:inviteUsers' %}" class="btn bg-gradient-info col-md-2 ms-2">Invite User</a> -->
+                <!-- <a href="{#% url 'users:inviteUsers' %}" class="btn bg-gradient-info col-md-2 ms-2">Invite User</a> -->
             </div>
             <div class="card-body px-0 pt-0 pb-2">
                 <div class="table-responsive p-0">
