Update others template

--- a/kawn_subscriptions_manager/templates/base.html
+++ b/kawn_subscriptions_manager/templates/base.html
@@ -53,7 +53,8 @@
     integrity="sha512-OvBgP9A2JBgiRad/mM36mkzXSXaJE9BEIENnVEmeZdITvwT09xnxLtT4twkCa8m/loMbPHsvPl0T8lRGVBwjlQ=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <!-- Your stuff: Third-party javascript libraries go here -->
-
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <!-- place project specific Javascript in this file -->
   {% compress js %}
   <script defer src="{% static 'js/project.js' %}"></script>
