--- a/kawn_subscriptions_manager/templates/account/login.html
+++ b/kawn_subscriptions_manager/templates/account/login.html
@@ -43,7 +43,7 @@
                                     {% for message in messages %}
                                     <div class="alert alert-success alert-dismissible fade show {{ message.tags }}"
                                         role="alert">
-                                        <strong>{{ message }}</strong>
+                                        <strong class="text-white">{{ message }}</strong>
                                         <button type="button" class="btn-close" data-bs-dismiss="alert"
                                             aria-label="Close"><span aria-hidden="true">&times;</span></button>
                                     </div>
