--- a/kawn_subscriptions_manager/templates/dashboard/dashboard.html
+++ b/kawn_subscriptions_manager/templates/dashboard/dashboard.html
@@ -7,7 +7,7 @@
 <div class="row">
     {% for message in messages %}
     <div class="alert alert-success alert-dismissible fade show {{ message.tags }}" role="alert">
-        <strong>{{ message }}</strong>
+        <strong class="text-white">{{ message }}</strong>
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"><span
                 aria-hidden="true">&times;</span></button>
     </div>
