--- a/kawn_subscriptions_manager/templates/account/password_change.html
+++ b/kawn_subscriptions_manager/templates/account/password_change.html
@@ -10,6 +10,14 @@
     <div class="col-xl-12 col-sm-12 mb-xl-0 mb-4">
         <div class="card">
             <div class="card-body"></div>
+            {% for message in messages %}
+            <div class="alert alert-success alert-dismissible fade show {{ message.tags }}" role="alert">
+                <strong class="text-white">{{ message }}</strong>
+                <button type="button" class="btn-close" data-bs-dismiss="alert"
+                    aria-label="Close"><span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            {% endfor %}
             <h2 class="text-center">{% translate "Change Password" %}</h2>
             <form method="POST" action="{% url 'account_change_password' %}" class="card card-body">
                 {% csrf_token %}
