--- a/kawn_subscriptions_manager/templates/account/email_confirm.html
+++ b/kawn_subscriptions_manager/templates/account/email_confirm.html
@@ -42,6 +42,15 @@
                                 <div class="card-header pb-0 text-left bg-transparent">
                                     <img src="{% static 'images/kawn_logo.svg' %}" alt="" width="30%"><br>
                                     <h3 class="font-weight-bolder text-info text-gradient">Subscriptions Manager</h3>
+
+                                    {% for message in messages %}
+                                    <div class="alert alert-success alert-dismissible fade show {{ message.tags }}" role="alert">
+                                        <strong class="text-white">{{ message }}</strong>
+                                        <button type="button" class="btn-close" data-bs-dismiss="alert"
+                                            aria-label="Close"><span aria-hidden="true">&times;</span>
+                                        </button>
+                                    </div>
+                                    {% endfor %}
                                 </div>
                                 <div class="card-body">
                                     {% if confirmation %}
@@ -52,13 +61,19 @@
                                         {{ user_display }}.{% endblocktranslate %}</p>
                                     <form method="post" action="{% url 'account_confirm_email' confirmation.key %}">
                                         {% csrf_token %}
-                                        <button class="btn btn-info bg-gradient-info" type="submit">{% translate 'Confirm' %}</button>
+                                        <button class="btn bg-gradient-info w-100 mt-2 mb-0" type="submit">{% translate 'Confirm' %}</button>
                                     </form>
                                     {% else %}
                                     {% url 'account_email' as email_url %}
                                     <p>{% blocktranslate %}This e-mail confirmation link expired or is invalid. Please
                                         <a href="{{ email_url }}">issue a new e-mail confirmation request</a>.{% endblocktranslate %}</p>
                                     {% endif %}
+
+                                    <div class="card-footer text-center pt-2 mt-2 px-lg-2 px-1">
+                                        <p class="mb-0 pb-0 text-sm mx-auto">
+                                            <a href="/" class="text-info text-gradient font-weight-bold">Back to Home</a>
+                                        </p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
