--- a/kawn_subscriptions_manager/templates/account/password_reset_from_key_done.html
+++ b/kawn_subscriptions_manager/templates/account/password_reset_from_key_done.html
@@ -40,6 +40,14 @@
                                 <div class="card-header pb-0 text-left bg-transparent">
                                     <img src="{% static 'images/kawn_logo.svg' %}" alt="" width="30%"><br>
                                     <h3 class="font-weight-bolder text-info text-gradient">Subscriptions Manager</h3>
+                                    {% for message in messages %}
+                                    <div class="alert alert-success alert-dismissible fade show {{ message.tags }}" role="alert">
+                                        <strong class="text-white">{{ message }}</strong>
+                                        <button type="button" class="btn-close" data-bs-dismiss="alert"
+                                            aria-label="Close"><span aria-hidden="true">&times;</span>
+                                        </button>
+                                    </div>
+                                    {% endfor %}
                                 </div>
                                 <div class="card-body">
                                     <h5><strong>{% translate "Change Password" %}</strong>
