--- a/kawn_subscriptions_manager/templates/account/verification_sent.html
+++ b/kawn_subscriptions_manager/templates/account/verification_sent.html
@@ -11,7 +11,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Password Reset</title>
+    <title>Email Verify</title>
     <!--     Fonts and icons     -->
     <link rel="icon" href="{% static 'images/kawn_logo.svg' %}" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" />
@@ -44,9 +44,9 @@
                                     <h3 class="font-weight-bolder text-info text-gradient">Subscriptions Manager</h3>
                                 </div>
                                 <div class="card-body">
-                                    <h1>{% translate "Verify Your E-mail Address" %}</h1>
+                                    <h2>{% translate "Verify Your Email Address" %}</h2>
 
-                                    <p>{% blocktranslate %}We have sent an e-mail to you for verification. Follow the
+                                    <p>{% blocktranslate %}We have sent an email to you for verification. Follow the
                                         link provided to finalize the signup process. Please contact us if you do not
                                         receive it within a few minutes.{% endblocktranslate %}</p>
                                     <div class="card-footer text-center pt-2 mt-2 px-lg-2 px-1">
