--- a/kawn_subscriptions_manager/templates/users/user_list.html
+++ b/kawn_subscriptions_manager/templates/users/user_list.html
@@ -7,13 +7,22 @@
 <div class="row">
     <div class="col-12">
         <div class="card mb-4">
-            <div class="card-header pb-0 justify-content-lg-between">
-                <h4 class="mb-4">Users</h4>
+            <div class="card-header pb-0 col-md-12">
+                <div class="row">
+                    {% for message in messages %}
+                    <div class="alert alert-success alert-dismissible fade show {{ message.tags }}" role="alert">
+                        <strong class="text-white">{{ message }}</strong>
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"><span
+                                aria-hidden="true">&times;</span></button>
+                    </div>
+                    {% endfor %}
+                    <div class="col-md-10 align-middle">
+                        <h4 class="font-weight-bolder mb-4">Users</h4>
+                    </div>
+                </div>
+                <a href="{% url 'users:add_users' %}" class="btn bg-gradient-info col-md-2">Add User</a>
             </div>
-            <div class="row">
-                <a href="{% url 'users:addUsers' %}" class="btn bg-gradient-info col-md-2 ms-4">Add User</a>
-                <!-- <a href="{#% url 'users:inviteUsers' %}" class="btn bg-gradient-info col-md-2 ms-2">Invite User</a> -->
-            </div>
+            
             <div class="card-body px-0 pt-0 pb-2">
                 <div class="table-responsive p-0">
                     <table class="table align-items-center mb-0">
@@ -21,9 +30,11 @@
                             <tr class="text-center">
                                 <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Name
                                 </th>
+                                <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Username
+                                </th>
                                 <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Email
                                 </th>
-                                <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Username
+                                <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Status
                                 </th>
                                 <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Access
                                 </th>
@@ -38,17 +49,28 @@
                                     <p class="text-xs mb-0">{{ user.name }}</p>
                                 </td>
                                 <td class="align-middle text-center text-sm">
+                                    <p class="text-xs mb-0">{{ user.username }}</p>
+                                </td>
+                                <td class="align-middle text-center text-sm">
                                     <p class="text-xs mb-0">{{ user.email }}</p>
                                 </td>
                                 <td class="align-middle text-center text-sm">
-                                    <p class="text-xs mb-0">{{ user.username }}</p>
+                                    {% if user.verified %}
+                                    <p class="text-xs mb-0">Verified</p>
+                                    {% else %}
+                                    <p class="text-xs mb-0">Unverified</p>
+                                    {% endif %}
+                                    <!-- ''' -->
+                                    <!-- <p class="text-xs mb-0">{{ user.verified }}</p> -->
+                                    <!-- ''' -->
                                 </td>
                                 <td class="align-middle text-center text-sm">
                                     <p class="text-xs mb-0">{{ user.type }}</p>
                                 </td>
                                 <td class="align-middle text-sm">
-                                    <a href="{% url 'users:editUsers' user.id %}" class="badge bg-warning">Edit</a>
-                                    <form class="d-inline" id="form-id" action="{% url 'users:deleteUsers' user.id %}" method="post">
+                                    <a href="{% url 'users:edit_users' user.id %}" class="badge bg-warning">Edit</a>
+                                    <form class="d-inline" id="form-id" action="{% url 'users:delete_users' user.id %}"
+                                        method="post">
                                         {% csrf_token %}
                                         <input name="_method" type="hidden" value="Delete">
                                         <button type="submit" class="badge btn-danger btn-flat show_confirm"
@@ -65,3 +87,27 @@
     </div>
 </div>
 {% endblock content %}
+
+{% block inline_javascript %}
+<script type="text/javascript">
+    $('.show_confirm').click(function (event) {
+        var form = $(this).closest("form");
+        var name = $(this).data("name");
+        event.preventDefault();
+        Swal.fire({
+            title: 'Are you sure?',
+            text: "You won't be able to revert this!",
+            icon: 'warning',
+            showCancelButton: true,
+            confirmButtonColor: '#3085d6',
+            cancelButtonColor: '#d33',
+            confirmButtonText: 'Yes, delete it!'
+        })
+            .then((willDelete) => {
+                if (willDelete.isConfirmed) {
+                    form.submit();
+                }
+            });
+    });
+</script>
+{% endblock inline_javascript %}
