--- a/kawn_subscriptions_manager/templates/layouts/footer.html
+++ b/kawn_subscriptions_manager/templates/layouts/footer.html
@@ -8,24 +8,24 @@
                         document.write(new Date().getFullYear())
                     </script>,
                     made by
-                    <a href="#" class="font-weight-bold" target="_blank">PT. Technomedia Multi
+                    <a href="https://indosterlingtechnomedia.com/our-product/kawn/" class="font-weight-bold" target="_blank">PT. Technomedia Multi
                         Sejahtera</a>
                 </div>
             </div>
             <div class="col-lg-6">
                 <ul class="nav nav-footer justify-content-center justify-content-lg-end">
                     <li class="nav-item">
-                        <a href="#" class="nav-link text-muted" target="_blank">Creative Tim</a>
+                        <a href="#" class="nav-link text-muted">Creative Tim</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link text-muted" target="_blank">About
+                        <a href="#" class="nav-link text-muted">About
                             Us</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link text-muted" target="_blank">Blog</a>
+                        <a href="#" class="nav-link text-muted">Blog</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link pe-0 text-muted" target="_blank">License</a>
+                        <a href="#" class="nav-link pe-0 text-muted">License</a>
                     </li>
                 </ul>
             </div>
