Update client modul

--- a/kawn_subscriptions_manager/templates/clients/list_client.html
+++ b/kawn_subscriptions_manager/templates/clients/list_client.html
@@ -15,12 +15,9 @@
                                 aria-hidden="true">&times;</span></button>
                     </div>
                     {% endfor %}
-                    <div class="col-md-10 align-middle">
-                        <h6>Clients</h6>
-                    </div>
-                    <div class="col-md-2"> <a href="{% url 'clients:add_client' %}"
-                            class="btn bg-gradient-info col-md-12">Add
-                            Client</a>
+                    <div class="align-middle">
+                        <h5 class="font-weight-bolder">Clients</h5>
+                        <a href="{% url 'clients:add_client' %}" class="btn bg-gradient-info col-md-2 mt-2">Add Client</a>
                     </div>
                 </div>
             </div>
@@ -32,7 +29,7 @@
                                 <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Client
                                     Name</th>
                                 <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">
-                                    Business Name
+                                    Outlet Name
                                 </th>
                                 <th
                                     class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">
