--- a/kawn_subscriptions_manager/templates/layouts/navbar.html
+++ b/kawn_subscriptions_manager/templates/layouts/navbar.html
@@ -5,7 +5,7 @@
     id="navbarBlur" navbar-scroll="true">
     <div class="container-fluid py-1 px-3">
         <nav aria-label="breadcrumb">
-            <h6 class="font-weight-bolder mb-0">{% block menu-title %}{% endblock %}</h6>
+            <img width="60" src="{% static 'images/kawn_logo.svg' %}" alt="">
         </nav>
         <div class="collapse navbar-collapse mt-sm-0 mt-2 me-md-0 me-sm-4" id="navbar">
             <div class="ms-md-auto pe-md-3 d-flex align-items-center">
@@ -30,9 +30,7 @@
                         </div>
                     </a>
                 </li>
-                <li class="nav-item px-3 d-flex align-items-center">
-
-                </li>
+                <li class="nav-item px-3 d-flex align-items-center"></li>
                 <li class="nav-item dropdown pe-2 d-flex align-items-center">
                     <a href="javascript:;" class="nav-link text-body p-0" id="dropdownMenuButton"
                         data-bs-toggle="dropdown" aria-expanded="false">
