--- a/kawn_subscriptions_manager/templates/users/user_form.html
+++ b/kawn_subscriptions_manager/templates/users/user_form.html
@@ -14,7 +14,7 @@
           {{ form|crispy }}
           <div class="control-group">
             <div class="controls">
-              <button type="submit" class="btn btn-info bg-gradient-info">Update</button>
+              <button type="submit" class="btn btn-info bg-gradient-info col-md-2">Update</button>
             </div>
           </div>
         </form>
