--- a/kawn_subscriptions_manager/templates/account/email.html
+++ b/kawn_subscriptions_manager/templates/account/email.html
@@ -8,8 +8,15 @@
 {% block inner %}
 <div class="row">
   <div class="col-xl-12 col-sm-12 mb-xl-0 mb-4">
-    <div class="card">
+    <div class="card col-xl-12">
       <div class="card-body">
+        {% for message in messages %}
+        <div class="alert alert-success alert-dismissible fade show {{ message.tags }}" role="alert">
+          <strong class="text-white">{{ message }}</strong>
+          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"><span
+              aria-hidden="true">&times;</span></button>
+        </div>
+        {% endfor %}
         <h1>{% translate "E-mail Addresses" %}</h1>
 
         {% if user.emailaddress_set.all %}
