--- a/kawn_subscriptions_manager/templates/layouts/sidebar.html
+++ b/kawn_subscriptions_manager/templates/layouts/sidebar.html
@@ -14,8 +14,12 @@
     <hr class="horizontal dark mt-0">
     <div class="collapse navbar-collapse  w-auto " id="sidenav-collapse-main">
         <ul class="navbar-nav">
+            <li class="nav-item mt-3">
+                <h6 class="ps-4 ms-2 text-uppercase text-xs font-weight-bolder opacity-6">Main Menu</h6>
+            </li>
+            {% url 'home' as home %}
             <li class="nav-item">
-                <a class="nav-link {% block dashboard-active %}{% endblock %}" href="/">
+                <a class="nav-link {% if request.get_full_path == home %}active{% endif %}" href="/">
                     <div
                         class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
                         <i class="fa-solid fa-house"></i>
@@ -23,27 +27,20 @@
                     <span class="nav-link-text ms-1">Dashboard</span>
                 </a>
             </li>
+            {% url 'clients:list_client' as list_client %}
             <li class="nav-item">
-                <a class="nav-link  {% block profile-active %}{% endblock %}" href="{% url 'users:profileUsers'  %}">
+                <a class="nav-link {% if request.get_full_path == list_client %}active{% endif %}" href="{% url 'clients:list_client'  %}">
                     <div
                         class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
-                        <i class="fa-solid fa-user"></i>
-                    </div>
-                    <span class="nav-link-text ms-1">My Profile</span>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'clients:list_client'  %}">
-                    <div
-                        class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
-                        <i class="fa-solid fa-user"></i>
+                        <i class="fa-solid fa-people-arrows"></i>
                     </div>
                     <span class="nav-link-text ms-1">Clients</span>
                 </a>
             </li>
+            {% url 'subscriptions:list_subscription_plan' as list_subscription_plan %}
             <li class="nav-item">
-                <a class="nav-link  {% block listsubscriptionplan-active %}{% endblock %}"
-                    href="{% url 'subscriptions:listSubscriptionPlan'  %}">
+                <a class="nav-link  {% if request.get_full_path == list_subscription_plan %}active{% endif %}"
+                    href="{% url 'subscriptions:list_subscription_plan'  %}">
                     <div
                         class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
                         <i class="fa-solid fa-diagram-next"></i>
@@ -51,9 +48,10 @@
                     <span class="nav-link-text ms-1">Subscription Plans</span>
                 </a>
             </li>
+            {% url 'subscriptions:list_client_subscription' as list_client_subscription %}
             <li class="nav-item">
-                <a class="nav-link  {% block listclientsubscriptions-active %}{% endblock %}"
-                    href="{% url 'subscriptions:listClientSubscription'  %}">
+                <a class="nav-link  {% if request.get_full_path == list_client_subscription %}active{% endif %}"
+                    href="{% url 'subscriptions:list_client_subscription'  %}">
                     <div
                         class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
                         <i class="fa-solid fa-list"></i>
@@ -61,13 +59,27 @@
                     <span class="nav-link-text ms-1">Client Subscriptions</span>
                 </a>
             </li>
+            {% url 'users:list_users' as list_users %}
             <li class="nav-item">
-                <a class="nav-link  {% block users-active %}{% endblock %}" href="{% url 'users:listUsers'%}">
+                <a class="nav-link  {% if request.get_full_path == list_users %}active{% endif %}" href="{% url 'users:list_users'%}">
                     <div
                         class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
-                        <i class="fa-solid fa-users"></i>
+                        <i class="fa-solid fa-people-group"></i>
                     </div>
                     <span class="nav-link-popeo ms-1">Users</span>
+                </a>
+            </li>
+            <li class="nav-item mt-3">
+                <h6 class="ps-4 ms-2 text-uppercase text-xs font-weight-bolder opacity-6">Settings Menu</h6>
+            </li>
+            {% url 'users:profile_users' as profile_users %}
+            <li class="nav-item">
+                <a class="nav-link  {% if request.get_full_path == profile_users %}active{% endif %}" href="{% url 'users:profile_users'  %}">
+                    <div
+                        class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
+                        <i class="fa-solid fa-user-gear"></i>
+                    </div>
+                    <span class="nav-link-text ms-1">My Profile</span>
                 </a>
             </li>
         </ul>
